Toolbar icon vertical alignment fixes

--- a/app/assets/stylesheets/alchemy/buttons.scss
+++ b/app/assets/stylesheets/alchemy/buttons.scss
@@ -148,7 +148,7 @@ button.icon_button {
   .icon_button {
     width: 29px;
     height: 29px;
-    line-height: 27px;
+    line-height: 24px;
   }
 
   label {
